Reduce spacing between links to fix bug in IE

--- a/www/assets/css/partials/_navigation.scss
+++ b/www/assets/css/partials/_navigation.scss
@@ -22,7 +22,7 @@ header{
 
 		li{
 			display: inline-block;
-			margin: 0 15px;
+			margin: 0 12px;
 			padding: 0;
 			position: relative;
 
@@ -85,7 +85,8 @@ header{
 		}
 
 		.v65-pageAParent{
-			color: $headerFontColorHover
+			color: $headerFontColorHover;
+			font-weight: bold;
 		}
 
 		.v65-home{}
@@ -116,10 +117,10 @@ header{
 		list-style: none;
 		margin: 0;
 		padding: 3px 0 0;
-	}
 
-	li{
 		ul{
+			padding-left: 5px;
+			font-size: 85%;
 		}
 	}
 
@@ -141,6 +142,7 @@ header{
 
 	.v65-pageAParent {
 		color: $gold;
+		font-weight: bold;
 	}
 
 	.v65-leftSelected{
